Bug #3717 ENCODE returns a character string, not a binary string